// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prepare.sql > line 7 1`] = `
[
  "PREPARE q1 AS SELECT 1 AS a",
  {
    "stmts": [
      {
        "stmt": {
          "PrepareStmt": {
            "name": "q1",
            "query": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 21,
                      "name": "a",
                      "val": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 21,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`prepare.sql > line 10 1`] = `
[
  "SELECT name, statement, parameter_types, result_types FROM pg_prepared_statements",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 59,
                  "relname": "pg_prepared_statements",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "name",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 13,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "statement",
                          },
                        },
                      ],
                      "location": 13,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 24,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "parameter_types",
                          },
                        },
                      ],
                      "location": 24,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 41,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "result_types",
                          },
                        },
                      ],
                      "location": 41,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`prepare.sql > line 16 1`] = `
[
  "DEALLOCATE q1",
  {
    "stmts": [
      {
        "stmt": {
          "DeallocateStmt": {
            "name": "q1",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`prepare.sql > line 33 1`] = `
[
  "PREPARE q2(text) AS
	SELECT datname, datistemplate, datallowconn
	FROM pg_database WHERE datname = $1",
  {
    "stmts": [
      {
        "stmt": {
          "PrepareStmt": {
            "argtypes": [
              {
                "TypeName": {
                  "location": 11,
                  "names": [
                    {
                      "String": {
                        "sval": "text",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            ],
            "name": "q2",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 71,
                      "relname": "pg_database",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 28,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "datname",
                              },
                            },
                          ],
                          "location": 28,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 37,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "datistemplate",
                              },
                            },
                          ],
                          "location": 37,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 52,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "datallowconn",
                              },
                            },
                          ],
                          "location": 52,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "datname",
                            },
                          },
                        ],
                        "location": 89,
                      },
                    },
                    "location": 97,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "ParamRef": {
                        "location": 99,
                        "number": 1,
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`prepare.sql > line 37 1`] = `
[
  "EXECUTE q2('postgres')",
  {
    "stmts": [
      {
        "stmt": {
          "ExecuteStmt": {
            "name": "q2",
            "params": [
              {
                "A_Const": {
                  "location": 11,
                  "sval": {
                    "sval": "postgres",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`prepare.sql > line 39 1`] = `
[
  "PREPARE q3(text, int, float, boolean, smallint) AS
	SELECT * FROM tenk1 WHERE string4 = $1 AND (four = $2 OR
	ten = $3::bigint OR true = $4 OR odd = $5::int)
	ORDER BY unique1",
  {
    "stmts": [
      {
        "stmt": {
          "PrepareStmt": {
            "argtypes": [
              {
                "TypeName": {
                  "location": 11,
                  "names": [
                    {
                      "String": {
                        "sval": "text",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
              {
                "TypeName": {
                  "location": 17,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
              {
                "TypeName": {
                  "location": 22,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "float8",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
              {
                "TypeName": {
                  "location": 29,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "bool",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
              {
                "TypeName": {
                  "location": 38,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int2",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            ],
            "name": "q3",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 66,
                      "relname": "tenk1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "sortClause": [
                  {
                    "SortBy": {
                      "location": -1,
                      "node": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "unique1",
                              },
                            },
                          ],
                          "location": 168,
                        },
                      },
                      "sortby_dir": "SORTBY_DEFAULT",
                      "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                    },
                  },
                ],
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 59,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 59,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "BoolExpr": {
                    "args": [
                      {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "string4",
                                  },
                                },
                              ],
                              "location": 78,
                            },
                          },
                          "location": 86,
                          "name": [
                            {
                              "String": {
                                "sval": "=",
                              },
                            },
                          ],
                          "rexpr": {
                            "ParamRef": {
                              "location": 88,
                              "number": 1,
                            },
                          },
                        },
                      },
                      {
                        "BoolExpr": {
                          "args": [
                            {
                              "A_Expr": {
                                "kind": "AEXPR_OP",
                                "lexpr": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "four",
                                        },
                                      },
                                    ],
                                    "location": 96,
                                  },
                                },
                                "location": 101,
                                "name": [
                                  {
                                    "String": {
                                      "sval": "=",
                                    },
                                  },
                                ],
                                "rexpr": {
                                  "ParamRef": {
                                    "location": 103,
                                    "number": 2,
                                  },
                                },
                              },
                            },
                            {
                              "A_Expr": {
                                "kind": "AEXPR_OP",
                                "lexpr": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "ten",
                                        },
                                      },
                                    ],
                                    "location": 110,
                                  },
                                },
                                "location": 114,
                                "name": [
                                  {
                                    "String": {
                                      "sval": "=",
                                    },
                                  },
                                ],
                                "rexpr": {
                                  "TypeCast": {
                                    "arg": {
                                      "ParamRef": {
                                        "location": 116,
                                        "number": 3,
                                      },
                                    },
                                    "location": 118,
                                    "typeName": {
                                      "location": 120,
                                      "names": [
                                        {
                                          "String": {
                                            "sval": "pg_catalog",
                                          },
                                        },
                                        {
                                          "String": {
                                            "sval": "int8",
                                          },
                                        },
                                      ],
                                      "typemod": -1,
                                    },
                                  },
                                },
                              },
                            },
                            {
                              "A_Expr": {
                                "kind": "AEXPR_OP",
                                "lexpr": {
                                  "A_Const": {
                                    "boolval": {
                                      "boolval": true,
                                    },
                                    "location": 130,
                                  },
                                },
                                "location": 135,
                                "name": [
                                  {
                                    "String": {
                                      "sval": "=",
                                    },
                                  },
                                ],
                                "rexpr": {
                                  "ParamRef": {
                                    "location": 137,
                                    "number": 4,
                                  },
                                },
                              },
                            },
                            {
                              "A_Expr": {
                                "kind": "AEXPR_OP",
                                "lexpr": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "odd",
                                        },
                                      },
                                    ],
                                    "location": 143,
                                  },
                                },
                                "location": 147,
                                "name": [
                                  {
                                    "String": {
                                      "sval": "=",
                                    },
                                  },
                                ],
                                "rexpr": {
                                  "TypeCast": {
                                    "arg": {
                                      "ParamRef": {
                                        "location": 149,
                                        "number": 5,
                                      },
                                    },
                                    "location": 151,
                                    "typeName": {
                                      "location": 153,
                                      "names": [
                                        {
                                          "String": {
                                            "sval": "pg_catalog",
                                          },
                                        },
                                        {
                                          "String": {
                                            "sval": "int4",
                                          },
                                        },
                                      ],
                                      "typemod": -1,
                                    },
                                  },
                                },
                              },
                            },
                          ],
                          "boolop": "OR_EXPR",
                          "location": 106,
                        },
                      },
                    ],
                    "boolop": "AND_EXPR",
                    "location": 91,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`prepare.sql > line 56 1`] = `
[
  "PREPARE q4(nonexistenttype) AS SELECT $1",
  {
    "stmts": [
      {
        "stmt": {
          "PrepareStmt": {
            "argtypes": [
              {
                "TypeName": {
                  "location": 11,
                  "names": [
                    {
                      "String": {
                        "sval": "nonexistenttype",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            ],
            "name": "q4",
            "query": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 38,
                      "val": {
                        "ParamRef": {
                          "location": 38,
                          "number": 1,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`prepare.sql > line 59 1`] = `
[
  "PREPARE q5(int, text) AS
	SELECT * FROM tenk1 WHERE unique1 = $1 OR stringu1 = $2
	ORDER BY unique1",
  {
    "stmts": [
      {
        "stmt": {
          "PrepareStmt": {
            "argtypes": [
              {
                "TypeName": {
                  "location": 11,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
              {
                "TypeName": {
                  "location": 16,
                  "names": [
                    {
                      "String": {
                        "sval": "text",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            ],
            "name": "q5",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 40,
                      "relname": "tenk1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "sortClause": [
                  {
                    "SortBy": {
                      "location": -1,
                      "node": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "unique1",
                              },
                            },
                          ],
                          "location": 92,
                        },
                      },
                      "sortby_dir": "SORTBY_DEFAULT",
                      "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                    },
                  },
                ],
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 33,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 33,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "BoolExpr": {
                    "args": [
                      {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "unique1",
                                  },
                                },
                              ],
                              "location": 52,
                            },
                          },
                          "location": 60,
                          "name": [
                            {
                              "String": {
                                "sval": "=",
                              },
                            },
                          ],
                          "rexpr": {
                            "ParamRef": {
                              "location": 62,
                              "number": 1,
                            },
                          },
                        },
                      },
                      {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "stringu1",
                                  },
                                },
                              ],
                              "location": 68,
                            },
                          },
                          "location": 77,
                          "name": [
                            {
                              "String": {
                                "sval": "=",
                              },
                            },
                          ],
                          "rexpr": {
                            "ParamRef": {
                              "location": 79,
                              "number": 2,
                            },
                          },
                        },
                      },
                    ],
                    "boolop": "OR_EXPR",
                    "location": 65,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`prepare.sql > line 69 1`] = `
[
  "PREPARE q6 AS
    SELECT * FROM tenk1 WHERE unique1 = $1 AND stringu1 = $2",
  {
    "stmts": [
      {
        "stmt": {
          "PrepareStmt": {
            "name": "q6",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 32,
                      "relname": "tenk1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 25,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 25,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "BoolExpr": {
                    "args": [
                      {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "unique1",
                                  },
                                },
                              ],
                              "location": 44,
                            },
                          },
                          "location": 52,
                          "name": [
                            {
                              "String": {
                                "sval": "=",
                              },
                            },
                          ],
                          "rexpr": {
                            "ParamRef": {
                              "location": 54,
                              "number": 1,
                            },
                          },
                        },
                      },
                      {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "stringu1",
                                  },
                                },
                              ],
                              "location": 61,
                            },
                          },
                          "location": 70,
                          "name": [
                            {
                              "String": {
                                "sval": "=",
                              },
                            },
                          ],
                          "rexpr": {
                            "ParamRef": {
                              "location": 72,
                              "number": 2,
                            },
                          },
                        },
                      },
                    ],
                    "boolop": "AND_EXPR",
                    "location": 57,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`prepare.sql > line 72 1`] = `
[
  "    SELECT * FROM road WHERE thepath = $1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 18,
                  "relname": "road",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 11,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 11,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "thepath",
                        },
                      },
                    ],
                    "location": 29,
                  },
                },
                "location": 37,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "ParamRef": {
                    "location": 39,
                    "number": 1,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`prepare.sql > line 75 1`] = `
[
  "PREPARE q8 AS
    UPDATE tenk1 SET stringu1 = $2 WHERE unique1 = $1",
  {
    "stmts": [
      {
        "stmt": {
          "PrepareStmt": {
            "name": "q8",
            "query": {
              "UpdateStmt": {
                "relation": {
                  "inh": true,
                  "location": 25,
                  "relname": "tenk1",
                  "relpersistence": "p",
                },
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 35,
                      "name": "stringu1",
                      "val": {
                        "ParamRef": {
                          "location": 46,
                          "number": 2,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "unique1",
                            },
                          },
                        ],
                        "location": 55,
                      },
                    },
                    "location": 63,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "ParamRef": {
                        "location": 65,
                        "number": 1,
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`prepare.sql > line 78 1`] = `
[
  "SELECT name, statement, parameter_types, result_types FROM pg_prepared_statements
    ORDER BY name",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 59,
                  "relname": "pg_prepared_statements",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "name",
                          },
                        },
                      ],
                      "location": 95,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "name",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 13,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "statement",
                          },
                        },
                      ],
                      "location": 13,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 24,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "parameter_types",
                          },
                        },
                      ],
                      "location": 24,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 41,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "result_types",
                          },
                        },
                      ],
                      "location": 41,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
